KSENROLL-14129: fixing spacing of card badge and waitlist icon in Registration and code cleanup
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@74255 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/card.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/card.less
@@ -8,6 +8,12 @@
   a {text-decoration: none;}
 }
 
+.kscr-Card-heading {
+  .kscr-Waitlisted-clockIcon{
+    margin-left: 1rem;
+  }
+}
+
 // Primary text in a card title (e.g. course code & reg group)
 .kscr-Card-title {
   color: @cardTextColor; //#666666;
@@ -354,7 +360,7 @@
 /**** END of Override of accordion panel for card section ****/
 
 
-/**** BEING Course card Colorings ****/
+/**** BEGINNING Course card Colorings ****/
 .kscr-Course-container {
     .panel-group .panel {
         padding-left: 1rem;
