--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/waitlisted.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/waitlisted.less
@@ -1,5 +1,5 @@
 
-.kscr-Waitlisted-details{
+.kscr-Waitlisted-details {
     border-top:@horizontalLineBorder;
     color: @primaryTextColor;
     .font-size(14);
@@ -8,8 +8,7 @@
     padding: 1rem 0 1rem 1rem;
 }
 
-.kscr-Waitlisted-clockIcon{
+.kscr-Waitlisted-clockIcon {
     color: @primaryTextColor;
     .font-size(13);
-    margin-left: 1rem;
 }
